@startuml

title GDL Application Layer State Machine

state Error
state Stopped
state Starting
state Stopping
state Running

[*] -right-> Stopped
Stopped -right[#blue]-> Starting : User calls start()
Starting -right-> Running : GDL starts successfully
Running -right[#blue]-> Stopping : User calls stop()
Stopping --> Stopped : GDL stops successfully

' Error handling
Starting -down-> Error : GDL fails to start
Running -down-> Error : Runtime error
Stopping -down-> Error : GDL fails to stop


@enduml